      Patch from Raphael Geissert.
    + [RA] Read only the first line of debian/compat, matching debhelper's
      behavior.  Improve the parsing of DH_COMPAT to pick up values that
      aren't numbers.  Warn of compatibility levels that aren't numbers.
      Use the same compatibility level that debhelper would use in some
      other checks.  Patch from Raphael Geissert.  (Closes: #513767)
  * checks/fields:
    + [RA] Allow but do not require a libmodule-build-perl dependency if
      the Build script is referenced in clean.  Thanks, Charles Plessy and
      gregor herrmann.  (Closes: #421549)
  * checks/fields{,.desc}:
    + [RA] Run dbg-package-missing-depends against the source package
      instead of the binary package and check that it has a dependency
      against another binary package built from the same source rather
      than making assumptions about the package name.  Patch from Raphael
      Geissert.  (Closes: #513336)
    + [RA] Use binary_field() to read control fields for binary packages.
      Patch from Raphael Geissert.
  * checks/files{,.desc}:
    + [RA] Add check for fonts in non-font packages.  Thanks, Paul Wise
      and Raphael Geissert.  (Closes: #513650)
    + [RA] Add check for fonts that duplicate already packaged fonts.
      Patch from Raphael Geissert.  Thanks to Paul Wise for analysis and
      data.  (Partly addresses #298545)
  * checks/shared-libs.desc:
    + [RA] Add references to the UsingSymbolsFiles wiki page in the tags
      requesting generation of a symbols file.
    + [RA] Provide details on how to manually check some of the shared
      library problems that Lintian diagnoses.  (Closes: #513086)
  * checks/standards-version:
    + [RA] Be robust against unparsable timestamps in changelog files.
      Patch from Raphael Geissert.  (Closes: #513766)
  * checks/version-substvars:
    + [RA] Use binary_field() to read control fields for binary packages.
      Patch from Raphael Geissert.

  * data/files/fonts: