@@ -1,0 +1,5 @@
+Testname: debhelper-dh-nativejava
+Sequence: 6000
+Version: 1.0
+Description: Dependency handling for dh_nativejava
+Test-Against: missing-build-dependency-for-dh_-command
